--- a/spring-petclinic-web/src/main/resources/templates/owners/index.html
+++ b/spring-petclinic-web/src/main/resources/templates/owners/index.html
@@ -6,5 +6,12 @@
 </head>
 <body>
 <h1 th:text="'List of Owners'">Owners List</h1>
+<tr th:each="owner:${owners}">
+<td th:text="${owner.id}">1</td>
+<td th:text="${owner.firstname}">2</td>
+<td th:text="${owner.lastname}">3</td>
+<td></td>
+<td></td>
+<tr/>
 </body>
 </html>
